# ROS_robotignite

1_ROS_Basics/exercise_21/: CMakeLists.txt  package.xml
1_ROS_Basics/exercise_21/launch/: move_robot.launch
1_ROS_Basics/exercise_23/: CMakeLists.txt  package.xml
1_ROS_Basics/exercise_23/launch/: publish_age.launch
1_ROS_Basics/exercise_23/src/: publish_age.py
1_ROS_Basics/exercise_46/: CMakeLists.txt  package.xml
1_ROS_Basics/exercise_46/launch/: move_drone.launch
1_ROS_Basics/exercise_46/src/: move_drone.py
1_ROS_Basics/my_package/src/: simple.py
1_ROS_Basics/read_odometry/: CMakeLists.txt  package.xml
1_ROS_Basics/read_odometry/launch/: odom_subscriber.launch
1_ROS_Basics/read_odometry/src/: odom_subscriber.py
1_ROS_Basics/topic_mini_project/: CMakeLists.txt  package.xml
1_ROS_Basics/topic_mini_project/launch/: mini_project.launch
1_ROS_Basics/topic_mini_project/src/: mini_project.py
1_ROS_Basics/unit_3_services/: CMakeLists.txt  package.xml
1_ROS_Basics/unit_3_services/launch/: call_bb8_move_in_square_custom_service_server.launch  call_bb8_move_in_square_service_server.launch  my_robot_arm_demo.launch  start_bb8_move_custom_service_server.launch  start_bb8_move_in_square_service_server.launch
1_ROS_Basics/unit_3_services/scripts/: bb8_move_custom_service_client.py  bb8_move_custom_service_server.py  bb8_move_in_square_service_client.py  move_bb8.py
1_ROS_Basics/unit_3_services/src/: excercise_3_1.py
